"fixed error's in admin category image homepage"

--- a/views/admin-2-layout.ejs
+++ b/views/admin-2-layout.ejs
@@ -19,6 +19,7 @@
   <link href="/assets/css/nucleo-svg.css" rel="stylesheet" />
   <!-- CSS Files -->
   <link id="pagestyle" href="/assets/css/soft-ui-dashboard.css?v=1.0.6" rel="stylesheet" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jQuery/3.3.1/jQuery.min.js"></script>
 </head>
 
 <body class="g-sidenav-show  bg-gray-100">
@@ -38,6 +39,8 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
 <!--   CorejS Files   -->
+<script src="/assets/js/jquery.plugin.min.js"></script>
+<script src="/assets/js/jquery.min.js"></script>
 <script src="/assets/js/core/popper.min.js"></script>
 <script src="/assets/js/core/bootstrap.min.js"></script>
 <script src="/assets/js/plugins/perfect-scrollbar.min.js"></script>
