--- a/views/admin-2/orders/orders.ejs
+++ b/views/admin-2/orders/orders.ejs
@@ -27,7 +27,6 @@
                         } %>
 
              <% orders.forEach((element,index)=>{ %>
-             <%=console.log(element);%>
              <tr>
                <td class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
                  <%- index+1 %>
@@ -50,7 +49,7 @@
                </td>
                <td class="align-middle text-center text-sm">
                  <div class="ms-auto text-end">
-                   <a href="/admin/order-view-more/<%-element?.orders?._id %>" style="text-decoration:none;">View More</a>
+                   <a href="/admin-panel/order-view-more/<%-element?.orders?._id %>" style="text-decoration:none;">View More</a>
                  </div>
                </td>
                <td> </td>
