--- a/views/admin-2/users/users.ejs
+++ b/views/admin-2/users/users.ejs
@@ -5,6 +5,7 @@
     </div>
     <div class="card-body px-0 pt-0 pb-2">
       <div class="table-responsive p-0">
+
         <table class="table align-items-center mb-0">
           <thead>
             <tr>
@@ -48,7 +49,15 @@
               </td>
               <td>
                 <div class="form-check form-switch ps-0">
-                  <input class="form-check-input ms-auto" type="checkbox" id="flexSwitchCheckDefault" checked>
+                  <% if (users.blocked){%>
+
+                  <input class="form-check-input ms-auto" type="checkbox" id="flexSwitchCheckDefault" onchange="unblockUser('<%- users._id %>',' <%- users.name  %>')">
+
+                  <% }else{ %>
+
+                  <input class="form-check-input ms-auto" type="checkbox" id="flexSwitchCheckDefault" checked onchange="blockUser('<%- users._id %>',' <%- users.name  %>')">
+                  <% } %>
+
                 </div>
               </td>
             </tr>
@@ -59,3 +68,68 @@
     </div>
   </div>
 </div>
+
+<script>
+
+
+  function blockUser(userId, userName) {
+
+    Swal.fire({
+      title: 'Are you sure?',
+      text: "Do You Want To Block " + userName,
+      icon: 'warning',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Confirm'
+    }).then((result) => {
+      if (result.isConfirmed) {
+        $.ajax({
+          url: '/admin-panel/user-block/' + userId,
+          method: 'put',
+          success: (response) => {
+            if (response.status) {
+              location.reload()
+            }
+          }
+        })
+        Swal.fire(
+          'Blocked!',
+          userName + ' has been blocked.',
+          'success'
+        )
+      }
+    })
+  }
+
+  function unblockUser(userId, userName) {
+
+    Swal.fire({
+      title: 'Are you sure?',
+      text: "Do You Want To unblock " + userName,
+      icon: 'warning',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Confirm'
+    }).then((result) => {
+      if (result.isConfirmed) {
+        $.ajax({
+          url: '/admin-panel/user-unblock/' + userId,
+          method: 'put',
+          success: (response) => {
+            if (response.status) {
+              location.reload()
+            }
+          }
+        })
+        Swal.fire(
+          'Block!',
+          userName + ' has been blocked.',
+          'success'
+        )
+      }
+    })
+
+  }
+</script>
