--- a/views/admin/orderViewMore.ejs
+++ b/views/admin/orderViewMore.ejs
@@ -151,7 +151,7 @@
                       <div class="card-body ">
                         <div class="container">
                           <% orders?.forEach((element,index)=>{ %>
-                            <% console.log(element); %> 
+                          <% console.log(element); %>
                           <div class="row mt-5">
                             <div class="mx-3">
 
@@ -212,7 +212,7 @@
                                               <%= element.orders.productsDetails[i].orderStatus %>
                                       </span>
                                       </h6>
-
+                                      <% if(element.orders.productsDetails[i].status==true){%>
                                       <% if (element.orders.productsDetails[i].orderStatus=='Processing') {%>
                                       <button class="btn btn-sm btn-primary" onclick="changeOrderStatus('<%=element.orders._id%>','<%=element.orders.productsDetails[i]._id%>','Placed')">NEXT STEP</button>
                                       <%}else if (element.orders.productsDetails[i].orderStatus=='Placed') {%>
@@ -226,11 +226,18 @@
                                       <%} else if(element.orders.productsDetails[i].orderStatus=='Delivered'){%>
                                       <button class="btn btn-sm btn-success" disabled onclick="changeOrderStatus('<%=element.orders._id%>','<%=element.orders.productsDetails[i]._id%>')">Delivered</button>
                                       <%}%>
-                                      
+                                      <%}else{%>
+                                      <button class="btn btn-sm btn-danger" disabled>Cancelled</button>
+                                      <%}%>
+
                                     </div>
                                     <div class="mx-5 ">
+                                      <% if(element.orders.productsDetails[i].orderStatus!='Delivered'){%>
                                       <% if(element.orders.productsDetails[i].status==true){%>
-                                      <button class="cancel btn text-white " style="border-radius: 10px; width: 130px; background-color: rgb(234, 34, 4);" onclick="cancelOrder('<%=element?.orders.productsDetails[i]?._id%>','<%=element?._id%>')">Cancel Order</button>
+                                      <button class="cancel btn text-white " style="border-radius: 10px; width: 130px; background-color: rgb(234, 34, 4);" onclick="cancelOrder('<%=element?.orders.productsDetails[i]?._id%>','<%=element?.orders?._id%>')">Cancel Order</button>
+                                      <%}else{%>
+                                      <button class="cancel btn text-white bg-danger" style="border-radius: 10px; width: 130px; " disabled>CancelOrder</button>
+                                      <%}%>
                                       <%}else{%>
                                       <button class="cancel btn text-white bg-danger" style="border-radius: 10px; width: 130px; " disabled>CancelOrder</button>
                                       <%}%>
@@ -352,10 +359,10 @@
                 'Updated!',
                 'Order Status is Updated',
                 'success'
-              ).then(()=>{
-                 location.reload()
+              ).then(() => {
+                location.reload()
               })
-             
+
             }
           }
         })
