[bug fix] sales-report bug fixed, admin landing page updated

--- a/views/admin/Sales-Report.ejs
+++ b/views/admin/Sales-Report.ejs
@@ -422,7 +422,7 @@
               <div class="col-lg-12 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <button onclick="generateYearlyReport('<%= yearly.data[0].total %>','<%= yearly.data[0].orders %>','<%= yearly.data[0].count %>')" class="btn btn-outline-primary btn-round btn-sm float-right">
+                    <button onclick="generateYearlyReport('<%= yearly?.data[0]?.total %>','<%= yearly?.data[0]?.orders %>','<%= yearly?.data[0]?.count %>')" class="btn btn-outline-primary btn-round btn-sm float-right">
                       Download PDF
                     </button>
                     <h4 class="card-title">Yearly Sales</h4>
